@@ -489,6 +489,19 @@ SELECT id, lr, lb, c FROM typetest1 ORDER BY id;
 (6 rows)
 
 ROLLBACK;
+BEGIN;
+CREATE TABLE shortpart (
+   id integer NOT NULL,
+   c  character(10)
+) PARTITION BY LIST (id);
+ALTER TABLE shortpart ATTACH PARTITION shorty FOR VALUES IN (1, 2, 3, 4, 5, 6, 7, 8, 9);
+INSERT INTO shortpart (id, c) VALUES (6, 'returnme') RETURNING *;
+ id |     c      
+----+------------
+  6 | returnme  
+(1 row)
+
+ROLLBACK;
 /*
  * Test triggers on foreign tables.
  */
